14 add tool support to custom servers (#15)
feat; add tool support to custom servers